namespaces/live.cloud-platform.service.justice.gov.uk/pfl-connecting-services-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pfl-connecting-services-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "pfl-connecting-services"
    cloud-platform.justice.gov.uk/application: "Connecting Services"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: central-digital-product-team@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/pfl-connecting-services"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
    cloud-platform.justice.gov.uk/review-after: "2026-02-24"
